--- a/src/client/pages/gift/Gift.css
+++ b/src/client/pages/gift/Gift.css
@@ -1,3 +1,10 @@
+.Gift-main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .Loading-container {
   text-align: center;
 }
@@ -14,23 +21,23 @@
 .Event-image-container {
   height: 25%;
   width: 100%;
-  align-content: center;
-  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .Event-image {
-  height: 25%;
+  z-index: 9;
   width: 100%;
 }
 
 .Event-image-text {
-  position: absolute;
-  top: 43%;
-  left: 33%;
+  position: fixed;
+  z-index: 10;
   font-family: Roboto;
-  font-size: 48px;
-  color: white;
+  font-size: xx-large;
   font-weight: bold;
+  color: white;
 }
 
 .Event-Details-container {
@@ -39,10 +46,15 @@
   float: left;
 }
 
+.Event-header-contribute-container {
+  text-align: center;
+}
+
 .Event-title {
   color: rgba(0, 0, 0, 0.87);
   font-family: Roboto;
-  font-size: 24px;
+  font-size: x-large;
+  font-style: bold;
   margin-top: 16px;
   margin-bottom: 2px;
   margin-left: 2px;
